--- a/gazetteer/css/style.css
+++ b/gazetteer/css/style.css
@@ -3,10 +3,10 @@ body {
   margin: 0;
 }
 
-html, body, #map {
+/* html, body, #map {
   height: 100%;
   width: 100vw;
-}
+} */
 
 /* html,
 body {
@@ -32,4 +32,25 @@ select {
 
 @media only screen and (min-width: 320px) and (max-width: 480px) {
 
+}
+
+#headline {
+    font-family: Calibri;
+    font-size: 30px;
+    text-align: center;
+    padding-right: 2px;
+    z-index: 1;
+}
+
+#map {
+    position: absolute; 
+    height: 90vh;
+    min-height: 200px;
+    width: 99.5vw;
+    min-width: 200px;
+    left: 2px;  
+    border: 3px solid;
+    border-color: grey;
+    margin-bottom: 0;
+    z-index: -2;
 }
